--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_HOST=your_railway_db_host
-DB_USER=your_railway_db_user
-DB_PASS=your_railway_db_password
-DB_NAME=your_railway_db_name
+DB_HOST=containers-us-west-XXX.railway.app
+DB_USER=railway
+DB_PASS=your-generated-password
+DB_NAME=railway
