--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 DB_HOST=containers-us-west-XXX.railway.app
-DB_USER=railway
-DB_PASS=your-generated-password
-DB_NAME=railway
+DB_USER=root
+DB_PASS=
+DB_NAME=Hotelreservation
