--- a/.env
+++ b/.env
@@ -1,4 +1,13 @@
-DB_HOST=containers-us-west-XXX.railway.app
-DB_USER=root
-DB_PASS=
-DB_NAME=Hotelreservation
+
+
+
+# MYSQLHOST="turntable.proxy.rlwy.net" # Public Host from your screenshot
+# MYSQLPORT="51581" # Public Port from your screenshot
+
+
+
+# --- Common Variables (Use values from Railway) ---
+MYSQLUSER="root"
+MYSQLPASSWORD="rsfCdwWxNiREdkYlxzREhvklmMPxefAq" # The password Railway provided
+MYSQLDATABASE="railway"
+
