--- a/.env
+++ b/.env
@@ -1,8 +1,12 @@
 
 
 
-# MYSQLHOST="turntable.proxy.rlwy.net" # Public Host from your screenshot
-# MYSQLPORT="51581" # Public Port from your screenshot
+MYSQLHOST="mysql.railway.internal"
+
+
+
+
+MYSQLPORT="3306" # Public Port from your screenshot
 
 
 
