--- a/.env
+++ b/.env
@@ -1,17 +1,4 @@
-
-
-
-MYSQLHOST="mysql.railway.internal"
-
-
-
-
-MYSQLPORT="3306" # Public Port from your screenshot
-
-
-
-# --- Common Variables (Use values from Railway) ---
-MYSQLUSER="root"
-MYSQLPASSWORD="rsfCdwWxNiREdkYlxzREhvklmMPxefAq" # The password Railway provided
-MYSQLDATABASE="railway"
-
+DB_HOST=containers-us-west-XXX.railway.app
+DB_USER=root
+DB_PASS=
+DB_NAME=Hotelreservation
